grammar/js/n3Parser.js
// Generated from n3.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var n3Listener = require('./n3Listener').n3Listener;
var n3Visitor = require('./n3Visitor').n3Visitor;

var grammarFileName = "n3.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'.'", "'@prefix'", "'@base'", "';'", "','", 
                     "'a'", "'@a'", "'has'", "'@has'", "'is'", "'of'", "'@is'", 
                     "'@of'", "'='", "'<='", "'=>'", "'^'", "'!'", "'['", 
                     "']'", "'('", "')'", "'{'", "'}'", "'^^'", "'@forSome'", 
                     "'@forAll'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, "COMMENT", "NumericLiteral", "BooleanLiteral", 
                      "String", "BlankNode", "QuickVar", "IRIREF", "PNAME_NS", 
                      "PNAME_LN", "BLANK_NODE_LABEL", "LANGTAG", "INTEGER", 
                      "DECIMAL", "DOUBLE", "EXPONENT", "STRING_LITERAL_LONG_SINGLE_QUOTE", 
                      "STRING_LITERAL_LONG_QUOTE", "STRING_LITERAL_QUOTE", 
                      "STRING_LITERAL_SINGLE_QUOTE", "UCHAR", "ECHAR", "WS", 
                      "ANON", "PN_CHARS_BASE", "PN_CHARS_U", "PN_CHARS", 
                      "BASE", "PREFIX", "PN_PREFIX", "PN_LOCAL", "PLX", 
                      "PERCENT", "HEX", "PN_LOCAL_ESC" ];

var ruleNames =  [ "n3Doc", "n3Statement", "n3Directive", "sparqlDirective", 
                   "sparqlBase", "sparqlPrefix", "prefixID", "base", "triples", 
                   "predicateObjectList", "objectList", "verb", "subject", 
                   "predicate", "object", "expression", "path", "pathItem", 
                   "literal", "blankNodePropertyList", "collection", "formula", 
                   "formulaContent", "rdfLiteral", "iri", "iriList", "prefixedName", 
                   "existential", "universal" ];

function n3Parser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

n3Parser.prototype = Object.create(antlr4.Parser.prototype);
n3Parser.prototype.constructor = n3Parser;

Object.defineProperty(n3Parser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

n3Parser.EOF = antlr4.Token.EOF;
n3Parser.T__0 = 1;
n3Parser.T__1 = 2;
n3Parser.T__2 = 3;
n3Parser.T__3 = 4;
n3Parser.T__4 = 5;
n3Parser.T__5 = 6;
n3Parser.T__6 = 7;
n3Parser.T__7 = 8;
n3Parser.T__8 = 9;
n3Parser.T__9 = 10;
n3Parser.T__10 = 11;
n3Parser.T__11 = 12;
n3Parser.T__12 = 13;
n3Parser.T__13 = 14;
n3Parser.T__14 = 15;
n3Parser.T__15 = 16;
n3Parser.T__16 = 17;
n3Parser.T__17 = 18;
n3Parser.T__18 = 19;
n3Parser.T__19 = 20;
n3Parser.T__20 = 21;
n3Parser.T__21 = 22;
n3Parser.T__22 = 23;
n3Parser.T__23 = 24;
n3Parser.T__24 = 25;
n3Parser.T__25 = 26;
n3Parser.T__26 = 27;
n3Parser.COMMENT = 28;
n3Parser.NumericLiteral = 29;
n3Parser.BooleanLiteral = 30;
n3Parser.String = 31;
n3Parser.BlankNode = 32;
n3Parser.QuickVar = 33;
n3Parser.IRIREF = 34;
n3Parser.PNAME_NS = 35;
n3Parser.PNAME_LN = 36;
n3Parser.BLANK_NODE_LABEL = 37;
n3Parser.LANGTAG = 38;
n3Parser.INTEGER = 39;
n3Parser.DECIMAL = 40;
n3Parser.DOUBLE = 41;
n3Parser.EXPONENT = 42;
n3Parser.STRING_LITERAL_LONG_SINGLE_QUOTE = 43;
n3Parser.STRING_LITERAL_LONG_QUOTE = 44;
n3Parser.STRING_LITERAL_QUOTE = 45;
n3Parser.STRING_LITERAL_SINGLE_QUOTE = 46;
n3Parser.UCHAR = 47;
n3Parser.ECHAR = 48;
n3Parser.WS = 49;
n3Parser.ANON = 50;
n3Parser.PN_CHARS_BASE = 51;
n3Parser.PN_CHARS_U = 52;
n3Parser.PN_CHARS = 53;
n3Parser.BASE = 54;
n3Parser.PREFIX = 55;
n3Parser.PN_PREFIX = 56;
n3Parser.PN_LOCAL = 57;
n3Parser.PLX = 58;
n3Parser.PERCENT = 59;
n3Parser.HEX = 60;
n3Parser.PN_LOCAL_ESC = 61;

n3Parser.RULE_n3Doc = 0;
n3Parser.RULE_n3Statement = 1;
n3Parser.RULE_n3Directive = 2;
n3Parser.RULE_sparqlDirective = 3;
n3Parser.RULE_sparqlBase = 4;
n3Parser.RULE_sparqlPrefix = 5;
n3Parser.RULE_prefixID = 6;
n3Parser.RULE_base = 7;
n3Parser.RULE_triples = 8;
n3Parser.RULE_predicateObjectList = 9;
n3Parser.RULE_objectList = 10;
n3Parser.RULE_verb = 11;
n3Parser.RULE_subject = 12;
n3Parser.RULE_predicate = 13;
n3Parser.RULE_object = 14;
n3Parser.RULE_expression = 15;
n3Parser.RULE_path = 16;
n3Parser.RULE_pathItem = 17;
n3Parser.RULE_literal = 18;
n3Parser.RULE_blankNodePropertyList = 19;
n3Parser.RULE_collection = 20;
n3Parser.RULE_formula = 21;
n3Parser.RULE_formulaContent = 22;
n3Parser.RULE_rdfLiteral = 23;
n3Parser.RULE_iri = 24;
n3Parser.RULE_iriList = 25;
n3Parser.RULE_prefixedName = 26;
n3Parser.RULE_existential = 27;
n3Parser.RULE_universal = 28;


function N3DocContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = n3Parser.RULE_n3Doc;
    return this;
}

N3DocContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
N3DocContext.prototype.constructor = N3DocContext;

N3DocContext.prototype.EOF = function() {
    return this.getToken(n3Parser.EOF, 0);
};

N3DocContext.prototype.n3Statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(N3StatementContext);
    } else {
        return this.getTypedRuleContext(N3StatementContext,i);
    }
};

N3DocContext.prototype.sparqlDirective = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SparqlDirectiveContext);
    } else {
        return this.getTypedRuleContext(SparqlDirectiveContext,i);
    }
};

N3DocContext.prototype.enterRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.enterN3Doc(this);
	}
};

N3DocContext.prototype.exitRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.exitN3Doc(this);
	}
};

N3DocContext.prototype.accept = function(visitor) {
    if ( visitor instanceof n3Visitor ) {
        return visitor.visitN3Doc(this);
    } else {
        return visitor.visitChildren(this);
    }
};




n3Parser.N3DocContext = N3DocContext;

n3Parser.prototype.n3Doc = function() {

    var localctx = new N3DocContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, n3Parser.RULE_n3Doc);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 64;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << n3Parser.T__1) | (1 << n3Parser.T__2) | (1 << n3Parser.T__18) | (1 << n3Parser.T__20) | (1 << n3Parser.T__22) | (1 << n3Parser.T__25) | (1 << n3Parser.T__26) | (1 << n3Parser.NumericLiteral) | (1 << n3Parser.BooleanLiteral) | (1 << n3Parser.String))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (n3Parser.BlankNode - 32)) | (1 << (n3Parser.QuickVar - 32)) | (1 << (n3Parser.IRIREF - 32)) | (1 << (n3Parser.PNAME_NS - 32)) | (1 << (n3Parser.PNAME_LN - 32)) | (1 << (n3Parser.BASE - 32)) | (1 << (n3Parser.PREFIX - 32)))) !== 0)) {
            this.state = 62;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case n3Parser.T__1:
            case n3Parser.T__2:
            case n3Parser.T__18:
            case n3Parser.T__20:
            case n3Parser.T__22:
            case n3Parser.T__25:
            case n3Parser.T__26:
            case n3Parser.NumericLiteral:
            case n3Parser.BooleanLiteral:
            case n3Parser.String:
            case n3Parser.BlankNode:
            case n3Parser.QuickVar:
            case n3Parser.IRIREF:
            case n3Parser.PNAME_NS:
            case n3Parser.PNAME_LN:
                this.state = 58;
                this.n3Statement();
                this.state = 59;
                this.match(n3Parser.T__0);
                break;
            case n3Parser.BASE:
            case n3Parser.PREFIX:
                this.state = 61;
                this.sparqlDirective();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 66;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 67;
        this.match(n3Parser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function N3StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = n3Parser.RULE_n3Statement;
    return this;
}

N3StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
N3StatementContext.prototype.constructor = N3StatementContext;

N3StatementContext.prototype.n3Directive = function() {
    return this.getTypedRuleContext(N3DirectiveContext,0);
};

N3StatementContext.prototype.triples = function() {
    return this.getTypedRuleContext(TriplesContext,0);
};

N3StatementContext.prototype.existential = function() {
    return this.getTypedRuleContext(ExistentialContext,0);
};

N3StatementContext.prototype.universal = function() {
    return this.getTypedRuleContext(UniversalContext,0);
};

N3StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.enterN3Statement(this);
	}
};

N3StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.exitN3Statement(this);
	}
};

N3StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof n3Visitor ) {
        return visitor.visitN3Statement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




n3Parser.N3StatementContext = N3StatementContext;

n3Parser.prototype.n3Statement = function() {

    var localctx = new N3StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, n3Parser.RULE_n3Statement);
    try {
        this.state = 73;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case n3Parser.T__1:
        case n3Parser.T__2:
            this.enterOuterAlt(localctx, 1);
            this.state = 69;
            this.n3Directive();
            break;
        case n3Parser.T__18:
        case n3Parser.T__20:
        case n3Parser.T__22:
        case n3Parser.NumericLiteral:
        case n3Parser.BooleanLiteral:
        case n3Parser.String:
        case n3Parser.BlankNode:
        case n3Parser.QuickVar:
        case n3Parser.IRIREF:
        case n3Parser.PNAME_NS:
        case n3Parser.PNAME_LN:
            this.enterOuterAlt(localctx, 2);
            this.state = 70;
            this.triples();
            break;
        case n3Parser.T__25:
            this.enterOuterAlt(localctx, 3);
            this.state = 71;
            this.existential();
            break;
        case n3Parser.T__26:
            this.enterOuterAlt(localctx, 4);
            this.state = 72;
            this.universal();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function N3DirectiveContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = n3Parser.RULE_n3Directive;
    return this;
}

N3DirectiveContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
N3DirectiveContext.prototype.constructor = N3DirectiveContext;

N3DirectiveContext.prototype.prefixID = function() {
    return this.getTypedRuleContext(PrefixIDContext,0);
};

N3DirectiveContext.prototype.base = function() {
    return this.getTypedRuleContext(BaseContext,0);
};

N3DirectiveContext.prototype.enterRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.enterN3Directive(this);
	}
};

N3DirectiveContext.prototype.exitRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.exitN3Directive(this);
	}
};

N3DirectiveContext.prototype.accept = function(visitor) {
    if ( visitor instanceof n3Visitor ) {
        return visitor.visitN3Directive(this);
    } else {
        return visitor.visitChildren(this);
    }
};




n3Parser.N3DirectiveContext = N3DirectiveContext;

n3Parser.prototype.n3Directive = function() {

    var localctx = new N3DirectiveContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, n3Parser.RULE_n3Directive);
    try {
        this.state = 77;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case n3Parser.T__1:
            this.enterOuterAlt(localctx, 1);
            this.state = 75;
            this.prefixID();
            break;
        case n3Parser.T__2:
            this.enterOuterAlt(localctx, 2);
            this.state = 76;
            this.base();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SparqlDirectiveContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = n3Parser.RULE_sparqlDirective;
    return this;
}

SparqlDirectiveContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SparqlDirectiveContext.prototype.constructor = SparqlDirectiveContext;

SparqlDirectiveContext.prototype.sparqlBase = function() {
    return this.getTypedRuleContext(SparqlBaseContext,0);
};

SparqlDirectiveContext.prototype.sparqlPrefix = function() {
    return this.getTypedRuleContext(SparqlPrefixContext,0);
};

SparqlDirectiveContext.prototype.enterRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.enterSparqlDirective(this);
	}
};

SparqlDirectiveContext.prototype.exitRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.exitSparqlDirective(this);
	}
};

SparqlDirectiveContext.prototype.accept = function(visitor) {
    if ( visitor instanceof n3Visitor ) {
        return visitor.visitSparqlDirective(this);
    } else {
        return visitor.visitChildren(this);
    }
};




n3Parser.SparqlDirectiveContext = SparqlDirectiveContext;

n3Parser.prototype.sparqlDirective = function() {

    var localctx = new SparqlDirectiveContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, n3Parser.RULE_sparqlDirective);
    try {
        this.state = 81;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case n3Parser.BASE:
            this.enterOuterAlt(localctx, 1);
            this.state = 79;
            this.sparqlBase();
            break;
        case n3Parser.PREFIX:
            this.enterOuterAlt(localctx, 2);
            this.state = 80;
            this.sparqlPrefix();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SparqlBaseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = n3Parser.RULE_sparqlBase;
    return this;
}

SparqlBaseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SparqlBaseContext.prototype.constructor = SparqlBaseContext;

SparqlBaseContext.prototype.BASE = function() {
    return this.getToken(n3Parser.BASE, 0);
};

SparqlBaseContext.prototype.IRIREF = function() {
    return this.getToken(n3Parser.IRIREF, 0);
};

SparqlBaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.enterSparqlBase(this);
	}
};

SparqlBaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.exitSparqlBase(this);
	}
};

SparqlBaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof n3Visitor ) {
        return visitor.visitSparqlBase(this);
    } else {
        return visitor.visitChildren(this);
    }
};




n3Parser.SparqlBaseContext = SparqlBaseContext;

n3Parser.prototype.sparqlBase = function() {

    var localctx = new SparqlBaseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, n3Parser.RULE_sparqlBase);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 83;
        this.match(n3Parser.BASE);
        this.state = 84;
        this.match(n3Parser.IRIREF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SparqlPrefixContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = n3Parser.RULE_sparqlPrefix;
    return this;
}

SparqlPrefixContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SparqlPrefixContext.prototype.constructor = SparqlPrefixContext;

SparqlPrefixContext.prototype.PREFIX = function() {
    return this.getToken(n3Parser.PREFIX, 0);
};

SparqlPrefixContext.prototype.PNAME_NS = function() {
    return this.getToken(n3Parser.PNAME_NS, 0);
};

SparqlPrefixContext.prototype.IRIREF = function() {
    return this.getToken(n3Parser.IRIREF, 0);
};

SparqlPrefixContext.prototype.enterRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.enterSparqlPrefix(this);
	}
};

SparqlPrefixContext.prototype.exitRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.exitSparqlPrefix(this);
	}
};

SparqlPrefixContext.prototype.accept = function(visitor) {
    if ( visitor instanceof n3Visitor ) {
        return visitor.visitSparqlPrefix(this);
    } else {
        return visitor.visitChildren(this);
    }
};




n3Parser.SparqlPrefixContext = SparqlPrefixContext;

n3Parser.prototype.sparqlPrefix = function() {

    var localctx = new SparqlPrefixContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, n3Parser.RULE_sparqlPrefix);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 86;
        this.match(n3Parser.PREFIX);
        this.state = 87;
        this.match(n3Parser.PNAME_NS);
        this.state = 88;
        this.match(n3Parser.IRIREF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrefixIDContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = n3Parser.RULE_prefixID;
    return this;
}

PrefixIDContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrefixIDContext.prototype.constructor = PrefixIDContext;

PrefixIDContext.prototype.PNAME_NS = function() {
    return this.getToken(n3Parser.PNAME_NS, 0);
};

PrefixIDContext.prototype.IRIREF = function() {
    return this.getToken(n3Parser.IRIREF, 0);
};

PrefixIDContext.prototype.enterRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.enterPrefixID(this);
	}
};

PrefixIDContext.prototype.exitRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.exitPrefixID(this);
	}
};

PrefixIDContext.prototype.accept = function(visitor) {
    if ( visitor instanceof n3Visitor ) {
        return visitor.visitPrefixID(this);
    } else {
        return visitor.visitChildren(this);
    }
};




n3Parser.PrefixIDContext = PrefixIDContext;

n3Parser.prototype.prefixID = function() {

    var localctx = new PrefixIDContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, n3Parser.RULE_prefixID);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90;
        this.match(n3Parser.T__1);
        this.state = 91;
        this.match(n3Parser.PNAME_NS);
        this.state = 92;
        this.match(n3Parser.IRIREF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BaseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = n3Parser.RULE_base;
    return this;
}

BaseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BaseContext.prototype.constructor = BaseContext;

BaseContext.prototype.IRIREF = function() {
    return this.getToken(n3Parser.IRIREF, 0);
};

BaseContext.prototype.enterRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.enterBase(this);
	}
};

BaseContext.prototype.exitRule = function(listener) {
    if(listener instanceof n3Listener ) {
        listener.exitBase(this);
	}
};

BaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof n3Visitor ) {
        return visitor.visitBase(this);
    } else {
        return visitor.visitChildren(this);
    }
};




n3Parser.BaseContext = BaseContext;

n3Parser.prototype.base = function() {
